# vggt_jax

./: .gitignore  README.md  README.zh-CN.md  demo_colmap.py  demo_gradio.py  demo_viser.py  pyproject.toml  requirements.txt  requirements_demo.txt  visual_util.py
docs/: package.md
examples/: README.md  README.zh-CN.md
scripts/: README.md  README.zh-CN.md  _common.py  bench_speed.py  convert_weights.py  demo_colmap.py  download_weights.py  run_infer.py  run_infer_grain.py  setup_uv.sh  verify_bonsai_structure_and_weights.py  verify_weights.py
tests/: test_conversion_mapping.py  test_dpt_residual.py  test_forward.py  test_track_predictor.py  test_track_sampling.py
training/: README.md  README.zh-CN.md  launch.py  loss.py  trainer.py
training/config/: default.yaml  default_dataset.yaml
training/data/: augmentation.py  base_dataset.py  composed_dataset.py  dataset_util.py  dynamic_dataloader.py  track_util.py  worker_fn.py
training/data/datasets/: co3d.py  vkitti.py
training/train_utils/: checkpoint.py  distributed.py  freeze.py  general.py  gradient_clip.py  logging.py  normalization.py  optimizer.py  tb_writer.py
vggt/: __init__.py
vggt/data/: __init__.py  grain.py
vggt/dependency/: __init__.py  distortion.py  np_to_pycolmap.py  projection.py  track_predict.py  vggsfm_tracker.py  vggsfm_utils.py
vggt/dependency/track_modules/: base_track_predictor.py  blocks.py  modules.py  (+2 more)
vggt/heads/: __init__.py  camera_head.py  dpt_head.py  track_head.py  track_ops.py
vggt/layers/: __init__.py  attention.py  block.py  drop_path.py  layer_scale.py  mlp.py  patch_embed.py  swiglu_ffn.py  vision_transformer.py
vggt/models/: aggregator.py  vggt.py
vggt/utils/: __init__.py  geometry.py  helper.py  io.py  load_fn.py  pose_enc.py  rotation.py  visual_track.py
vggt_jax/: holders.py
vggt_jax/data/: grain.py
vggt_jax/heads/: __init__.py  camera_head.py  dpt_head.py  head_act.py  track_head.py  track_ops.py  utils.py
vggt_jax/layers/: __init__.py  attention.py  block.py  patch_embed.py  rope.py
vggt_jax/models/: __init__.py  aggregator.py
vggt_jax/utils/: __init__.py  io.py
(+8 files in other folders)
